--- a/index.html
+++ b/index.html
@@ -1,43 +1,131 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr-CA">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Welcome to xyz.ca</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MAUSS CPA — Site en construction (Montréal)</title>
+  <meta name="description" content="Cabinet de CPA à Montréal. MAUSS CPA — Comptabilité, fiscalité et conseils. Prenez contact pendant que le site est en construction.">
+  <meta name="theme-color" content="#111111">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="preload" as="image" href="Matthieu_Mauss_Logo_CPA.png" imagesrcset="Matthieu_Mauss_Logo_CPA.png 1x">
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fr_CA">
+  <meta property="og:title" content="MAUSS CPA — Site en construction (Montréal)">
+  <meta property="og:description" content="Cabinet de CPA à Montréal. Comptabilité, fiscalité et conseils.">
+  <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
+  <meta property="og:image:alt" content="Logo MAUSS CPA">
+
+  <!-- LocalBusiness structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AccountingService",
+    "name": "MAUSS CPA",
+    "image": "Matthieu_Mauss_Logo_CPA.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Montréal",
+      "addressRegion": "QC",
+      "addressCountry": "CA"
+    },
+    "url": "https://mauss.ca",
+    "areaServed": "Québec",
+    "telephone": "",
+    "email": "contact@mauss.ca"
+  }
+  </script>
+
+  <!--
+    Personnalisation rapide:
+    - Remplacez le mail dans l’attribut href de [data-mailto]
+    - Ajoutez votre téléphone dans le lien [data-tel]
+    - Remplacez l’URL de prise de RDV (#) si vous utilisez Calendly/YouCanBook.me
+  -->
 </head>
 <body>
-  <header class="site-header">
-    <h1>🎉 Hello, world!</h1>
-    <p>Your site is live on <strong>GitHub Pages</strong> with a custom domain.</p>
-  </header>
+  <div class="bg-grid" aria-hidden="true"></div>
 
-  <main class="container">
-    <section class="card">
-      <h2>About this starter</h2>
-      <p>This is a minimal, beginner‑friendly template. Edit <code>index.html</code>, <code>styles.css</code>, and <code>script.js</code> to make it yours.</p>
-    </section>
+  <div class="container">
+    <!-- Header -->
+    <header class="wrapper header">
+      <div class="brand">
+        <img src="Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
+        <span class="tag">Cabinet comptable · Montréal</span>
+      </div>
+      <nav class="small">
+        <!-- On peut ajouter des liens sociaux si désiré -->
+      </nav>
+    </header>
 
-    <section class="card">
-      <h2>Next steps</h2>
-      <ol>
-        <li>Open this repository on GitHub.</li>
-        <li>Go to <em>Settings → Pages</em> and ensure the source branch is set to <code>main</code>.</li>
-        <li>Make sure your custom domain is set to <code>xyz.ca</code> and HTTPS is enforced.</li>
-      </ol>
-    </section>
+    <!-- Hero -->
+    <main class="wrapper hero" role="main">
+      <div class="decor" aria-hidden="true">
+        <div class="big"></div>
+        <div class="big"></div>
+      </div>
 
-    <section class="card">
-      <h2>JavaScript test</h2>
-      <button id="helloBtn">Click me</button>
-      <p id="helloMsg" class="muted">(You haven't clicked the button yet.)</p>
-    </section>
-  </main>
+      <div class="hero-inner">
+        <section>
+          <div class="kicker">MAUSS CPA</div>
+          <h1><span class="thin">Site</span> <span class="accent">en construction</span></h1>
+          <p class="subtitle">
+            Comptabilité | Fiscalité | Conseils. Basé à Montréal — accompagnement pragmatique pour
+            entrepreneurs, créatifs et PME.
+          </p>
 
-  <footer class="site-footer">
-    <p>Made with ♥ and GitHub Pages.</p>
-  </footer>
+          <div class="badges" aria-label="Spécialités">
+            <span class="badge">États financiers</span>
+            <span class="badge">Déclarations d’impôt</span>
+            <span class="badge">TPS/TVQ & paies</span>
+            <span class="badge">Conseils & optimisation</span>
+          </div>
 
-  <script src="script.js"></script>
+          <div class="cta" role="group" aria-label="Actions principales">
+            <a class="btn primary" data-mailto href="mailto:contact@mauss.ca">Écrivez‑moi</a>
+            <a class="btn ghost" data-tel href="tel:">Appeler</a>
+            <a class="btn ghost" href="#" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
+          </div>
+
+          <hr>
+
+          <p class="small">
+            Besoin d’un document, d’un devis ou d’un appel découverte? Je réponds rapidement, même pendant la mise à jour du site.
+          </p>
+        </section>
+
+        <aside class="info" aria-label="Coordonnées">
+          <div class="row">
+            <div class="label">Montréal</div>
+            <div>Québec, Canada<br><span class="small">Service à distance partout au Québec</span></div>
+          </div>
+          <div class="row">
+            <div class="label">Courriel</div>
+            <div><a data-mailto href="mailto:contact@mauss.ca">contact@mauss.ca</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Téléphone</div>
+            <div><a data-tel href="tel:">—</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Disponibilité</div>
+            <div>Lun–Ven · 9h–17h</div>
+          </div>
+        </aside>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="wrapper footer" role="contentinfo">
+      <div class="dots" aria-hidden="true">
+        <span class="dot"></span><span class="dot"></span>
+      </div>
+      <div>© <span data-year></span> MAUSS CPA · Tous droits réservés</div>
+    </footer>
+  </div>
+
+  <script type="module" src="script.js"></script>
 </body>
 </html>
