--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       "addressRegion": "QC",
       "addressCountry": "CA"
     },
-    "url": "https://mauss.ca",
+    "url": "https://www.mauss.ca",
     "areaServed": "Québec",
     "telephone": "",
-    "email": "contact@mauss.ca"
+    "email": "matthieu.mauss@gmail.com"
   }
   </script>
 
@@ -122,7 +122,7 @@
       <div class="dots" aria-hidden="true">
         <span class="dot"></span><span class="dot"></span>
       </div>
-      <div>© <span data-year></span> MAUSS CPA · Tous droits réservés</div>
+      <div>© <span data-year></span> MATTHIEU MAUSS CPA · Tous droits réservés</div>
     </footer>
   </div>
 
