--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fr_CA">
-  <meta property="og:title" content="MAUSS CPA — Site en construction (Montréal)">
+  <meta property="og:title" content="MATTHIEU MAUSS CPA — Site en construction (Montréal)">
   <meta property="og:description" content="Cabinet de CPA à Montréal. Comptabilité, fiscalité et conseils.">
   <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
   <meta property="og:image:alt" content="Logo MAUSS CPA">
@@ -23,7 +23,7 @@
   {
     "@context": "https://schema.org",
     "@type": "AccountingService",
-    "name": "MAUSS CPA",
+    "name": "MATTHIEU MAUSS CPA",
     "image": "Matthieu_Mauss_Logo_CPA.png",
     "address": {
       "@type": "PostalAddress",
@@ -53,7 +53,6 @@
     <header class="wrapper header">
       <div class="brand">
         <img src="Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
-        <span class="tag">Cabinet comptable · Montréal</span>
       </div>
       <nav class="small">
         <!-- On peut ajouter des liens sociaux si désiré -->
