changing a bit of stuff

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>MAUSS CPA — Site en construction (Montréal)</title>
   <meta name="description" content="Cabinet de CPA à Montréal. MAUSS CPA — Comptabilité, fiscalité et conseils. Prenez contact pendant que le site est en construction.">
   <meta name="theme-color" content="#111111">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="preload" as="image" href="Matthieu_Mauss_Logo_CPA.png" imagesrcset="Matthieu_Mauss_Logo_CPA.png 1x">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link rel="preload" as="image" href="assets/Matthieu_Mauss_Logo_CPA.png" imagesrcset="Matthieu_Mauss_Logo_CPA.png 1x">
   <link rel="stylesheet" href="styles.css">
 
   <!-- Open Graph / Social -->
@@ -24,7 +24,7 @@
     "@context": "https://schema.org",
     "@type": "AccountingService",
     "name": "MATTHIEU MAUSS CPA",
-    "image": "Matthieu_Mauss_Logo_CPA.png",
+    "image": "assets/Matthieu_Mauss_Logo_CPA.png",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Montréal",
@@ -51,13 +51,13 @@
   <div class="container">
     <!-- Header -->
     <header class="wrapper header">
-      <div class="brand">
-        <img src="Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
-      </div>
-      <nav class="small">
-        <!-- On peut ajouter des liens sociaux si désiré -->
-      </nav>
-    </header>
+  <nav class="small">
+    <!-- On peut ajouter des liens sociaux si désiré -->
+  </nav>
+  <div class="brand">
+    <img src="assets/Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
+  </div>
+</header>
 
     <!-- Hero -->
     <main class="wrapper hero" role="main">
@@ -98,11 +98,11 @@
         <aside class="info" aria-label="Coordonnées">
           <div class="row">
             <div class="label">Montréal</div>
-            <div>Québec, Canada<br><span class="small">Service à distance partout au Québec</span></div>
+            <div>Québec, Canada<br><span class="small">Service à distance partout au Canada</span></div>
           </div>
           <div class="row">
             <div class="label">Courriel</div>
-            <div><a data-mailto href="mailto:contact@mauss.ca">contact@mauss.ca</a></div>
+            <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
           </div>
           <div class="row">
             <div class="label">Téléphone</div>
