--- a/index.html
+++ b/index.html
@@ -16,9 +16,61 @@
     </nav>
   </header>
 
-  <main>
+  <main class="wrapper hero" role="main">
     <!-- Ici, conservez votre contenu existant (hero, services, etc.) -->
+    <div class="decor" aria-hidden="true">
+        <div class="big"></div>
+        <div class="big"></div>
+      </div>
 
+      <div class="hero-inner">
+        <section>
+          <div class="kicker">MAUSS CPA</div>
+          <h1><span class="thin">Site</span> <span class="accent">en construction</span></h1>
+          <p class="subtitle">
+            Comptabilité | Fiscalité | Conseils. Basé à Montréal — accompagnement pragmatique pour
+            entrepreneurs, créatifs et PME.
+          </p>
+
+          <div class="badges" aria-label="Spécialités">
+            <span class="badge">États financiers</span>
+            <span class="badge">Déclarations d’impôt</span>
+            <span class="badge">TPS/TVQ & paies</span>
+            <span class="badge">Conseils & optimisation</span>
+          </div>
+
+          <div class="cta" role="group" aria-label="Actions principales">
+            <a class="btn primary" data-mailto href="mailto:contact@mauss.ca">Écrivez‑moi</a>
+            <a class="btn ghost" data-tel href="tel:">Appeler</a>
+            <a class="btn ghost" href="#" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
+          </div>
+
+          <hr>
+
+          <p class="small">
+            Besoin d’un document, d’un devis ou d’un appel découverte? Je réponds rapidement, même pendant la mise à jour du site.
+          </p>
+        </section>
+
+        <aside class="info" aria-label="Coordonnées">
+          <div class="row">
+            <div class="label">Montréal</div>
+            <div>Québec, Canada<br><span class="small">Service à distance partout au Canada</span></div>
+          </div>
+          <div class="row">
+            <div class="label">Courriel</div>
+            <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Téléphone</div>
+            <div><a data-tel href="tel:">—</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Disponibilité</div>
+            <div>Lun–Ven · 9h–17h</div>
+          </div>
+        </aside>
+      </div>
     <!-- Section Contact par courriel -->
     <section id="contact" class="wrapper card" role="region" aria-labelledby="contact-title">
       <h2 id="contact-title">Contact par courriel</h2>
