--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MAUSS – Comptabilité</title>
+  <title>MAUSS CPA — Site en construction (Montréal)</title>
+  <meta name="description" content="Cabinet de CPA à Montréal. MAUSS CPA — Comptabilité, fiscalité et conseils. Prenez contact pendant que le site est en construction.">
+  <meta name="theme-color" content="#111111">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link rel="preload" as="image" href="assets/Matthieu_Mauss_Logo_CPA.png" imagesrcset="Matthieu_Mauss_Logo_CPA.png 1x">
   <link rel="stylesheet" href="styles.css">
-  <meta name="description" content="MAUSS – Services de comptabilité. Contact et prise de rendez-vous.">
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fr_CA">
+  <meta property="og:title" content="MATTHIEU MAUSS CPA — Site en construction (Montréal)">
+  <meta property="og:description" content="Cabinet de CPA à Montréal. Comptabilité, fiscalité et conseils.">
+  <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
+  <meta property="og:image:alt" content="Logo MAUSS CPA">
+
+  <!-- LocalBusiness structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AccountingService",
+    "name": "MATTHIEU MAUSS CPA",
+    "image": "assets/Matthieu_Mauss_Logo_CPA.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Montréal",
+      "addressRegion": "QC",
+      "addressCountry": "CA"
+    },
+    "url": "https://www.mauss.ca",
+    "areaServed": "Québec",
+    "email": "matthieu.mauss@gmail.com"
+  }
+  </script>
+
+  <!--
+    Personnalisation rapide:
+    - Remplacez le mail dans l’attribut href de [data-mailto]
+    - Ajoutez votre téléphone dans le lien [data-tel]
+    - Remplacez l’URL de prise de RDV (#) si vous utilisez Calendly/YouCanBook.me
+  -->
 </head>
 <body>
   <header class="wrapper">
