--- a/index.html
+++ b/index.html
@@ -45,13 +45,18 @@
   -->
 </head>
 <body>
-  <header class="wrapper">
-    <h1>MAUSS</h1>
-    <p>Services de comptabilité</p>
-    <nav>
-      <a href="#contact">Contact</a> · <a href="#rdv">Prendre un rendez-vous</a>
-    </nav>
-  </header>
+    <div class="bg-grid" aria-hidden="true"></div>
+
+  <div class="container">
+    <!-- Header -->
+    <header class="wrapper header">
+  <nav class="small">
+    <!-- On peut ajouter des liens sociaux si désiré -->
+  </nav>
+  <div class="brand">
+    <img src="assets/Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
+  </div>
+</header>
 
   <main class="wrapper hero" role="main">
     <!-- Ici, conservez votre contenu existant (hero, services, etc.) -->
