--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 
       <div class="hero-inner">
         <section>
-          <div class="brand">
             <img src="assets/Matthieu_Mauss_Logo_CPA.png" width="240" height="84" alt="MAUSS CPA — Logo">
-          </div>
           <h1><span class="thin">Site</span> <span class="accent">en construction</span></h1>
           <p class="subtitle">
             Comptabilité | Fiscalité | Conseils. Basé à Montréal — accompagnement pragmatique pour
@@ -103,13 +101,8 @@
             <div class="label">Courriel</div>
             <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
           </div>
-          <div class="row">
-            <div class="label">Téléphone</div>
-            <div><a data-tel href="tel:">—</a></div>
-          </div>
-          <div class="row">
             <div class="label">Disponibilité</div>
-            <div>Lun–Ven · 9h–17h</div>
+            <div><span>Lun–Ven · 9h–17h</span></div>
           </div>
         </aside>
       </div>
@@ -196,7 +189,7 @@
   </main>
 
   <footer class="wrapper">
-    <p class="small">© 2025 MAUSS</p>
+    <p class="small">© 2025 MATTHIEU MAUSS</p>
   </footer>
 
   <script src="script.js" defer></script>
