changing email adress

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     },
     "url": "https://www.mauss.ca",
     "areaServed": "Québec",
-    "email": "matthieu.mauss@gmail.com"
+    "email": "contact@mauss.ca"
   }
   </script>
 
@@ -99,7 +99,7 @@
           </div>
           <div class="row">
             <div class="label">Courriel</div>
-            <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
+            <div><a data-mailto href="mailto:contact@mauss.ca">contact@mauss.ca</a></div>
           </div>
             <div class="label">Disponibilité</div>
             <div><span>Lun–Ven · 9h–17h</span></div>
