correction sur le honeypot

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
 
         <!-- Honeypot (anti-spam) -->
-        <input type="text" name="_gotcha" class="visually-hidden" tabindex="-1" autocomplete="off">
+        <input type="text" class="visually-hidden" tabindex="-1" autocomplete="off">
 
         <!-- Turnstile -->
         <div class="cf-turnstile" data-sitekey="0x4AAAAAABukGOeYRzV1hMDT" data-theme="light"></div>
@@ -177,7 +177,7 @@
         <input type="hidden" name="subject" id="rdv-subject">
 
         <!-- Honeypot anti-spam -->
-        <input type="text" name="_gotcha" class="visually-hidden" tabindex="-1" autocomplete="off">
+        <input type="text" class="visually-hidden" tabindex="-1" autocomplete="off">
 
         <!-- Turnstile -->
         <div class="cf-turnstile" data-sitekey="0x4AAAAAABukGOeYRzV1hMDT" data-theme="light"></div>
