--- a/index.html
+++ b/index.html
@@ -99,12 +99,23 @@
           </div>
         </section>
 
-        <aside class="contact-infos">
-          <ul>
-            <li><strong>Courriel</strong> <a href="mailto:contact@mauss.ca">contact@mauss.ca</a></li>
-            <li><strong>Montréal</strong>, Québec</li>
-            <li><strong>Heures</strong> Lun–Ven • 9h–17h</li>
-          </ul>
+        <aside class="info" aria-label="Coordonnées">
+          <div class="row">
+            <div class="label">Montréal</div>
+            <div>Québec, Canada<br><span class="small">Service à distance partout au Canada</span></div>
+          </div>
+          <div class="row">
+            <div class="label">Courriel</div>
+            <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Téléphone</div>
+            <div><a data-tel href="tel:">—</a></div>
+          </div>
+          <div class="row">
+            <div class="label">Disponibilité</div>
+            <div>Lun–Ven · 9h–17h</div>
+          </div>
         </aside>
       </div>
     </section>
