--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!doctype html>
 <html lang="fr">
 <head>
@@ -47,6 +48,12 @@
       <a class="brand" href="/">
         <img src="assets/Matthieu_Mauss_Logo_CPA.png" width="160" height="56" alt="MAUSS CPA — Logo">
       </a>
+      <nav aria-label="Navigation principale">
+        <ul class="nav">
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#rdv">Rendez-vous</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -99,23 +106,12 @@
           </div>
         </section>
 
-        <aside class="info" aria-label="Coordonnées">
-          <div class="row">
-            <div class="label">Montréal</div>
-            <div>Québec, Canada<br><span class="small">Service à distance partout au Canada</span></div>
-          </div>
-          <div class="row">
-            <div class="label">Courriel</div>
-            <div><a data-mailto href="mailto:matthieu@mauss.ca">matthieu@mauss.ca</a></div>
-          </div>
-          <div class="row">
-            <div class="label">Téléphone</div>
-            <div><a data-tel href="tel:">—</a></div>
-          </div>
-          <div class="row">
-            <div class="label">Disponibilité</div>
-            <div>Lun–Ven · 9h–17h</div>
-          </div>
+        <aside class="contact-infos">
+          <ul>
+            <li><strong>Courriel</strong> <a href="mailto:contact@mauss.ca">contact@mauss.ca</a></li>
+            <li><strong>Montréal</strong>, Québec</li>
+            <li><strong>Heures</strong> Lun–Ven • 9h–17h</li>
+          </ul>
         </aside>
       </div>
     </section>
