--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
 
           <div id="cta-buttons" class="cta" role="group" aria-label="Actions principales">
-            <a class="btn primary" data-target="contact" data-mailto href="#contact">Écrivez‑moi</a>
+            <a class="btn primary" data-target="contact" href="#contact">Écrivez‑moi</a>
             <!-- <a class="btn ghost" data-tel href="tel:">Appeler</a> -->
             <a class="btn ghost" data-target="rdv" href="#rdv" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
           </div>
