--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </aside>
       </div>
     <!-- Section Contact par courriel -->
-    <section id="contact" class="wrapper card" role="region" aria-labelledby="contact-title" hidden>
+    <section id="contact" class="wrapper card" role="region" aria-labelledby="contact-title" class="is-hidden">
       <h2 id="contact-title">Contact par courriel</h2>
       <p class="small">Remplissez ce formulaire — c’est un simple envoi de courriel (pas de réponse automatique).</p>
 
@@ -139,7 +139,7 @@
     </section>
 
     <!-- Section Prendre un rendez-vous -->
-    <section id="rdv" class="wrapper card" role="region" aria-labelledby="rdv-title" hidden>
+    <section id="rdv" class="wrapper card" role="region" aria-labelledby="rdv-title" class="is-hidden">
       <h2 id="rdv-title">Prendre un rendez-vous</h2>
       <p class="small">Choisissez une date et un créneau de 30 minutes (entre 09:00 et 17:00). Je vous répondrai ensuite avec une invitation Google Meet.</p>
 
