--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MAUSS CPA — Site en construction</title>
+  <!-- <title>MAUSS CPA — Site en construction</title> -->
   <meta name="description" content="Cabinet de CPA à Montréal. MAUSS CPA — Comptabilité, fiscalité et conseils. Prenez contact pendant que le site est en construction.">
   <meta name="theme-color" content="#111111">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
@@ -44,7 +44,7 @@
 
   <div class="container">
     <!-- Header -->
-    <header class="wrapper header">
+    <header id="header" class="wrapper header">
   <nav class="small">
     <!-- On peut ajouter des liens sociaux si désiré -->
   </nav>
@@ -74,10 +74,10 @@
             <span class="badge">Conseils & optimisation</span>
           </div>
 
-          <div id="cta-buttons" class="cta" role="group" aria-label="Actions principales">
-            <a class="btn primary" data-target="contact" href="#contact">Écrivez‑moi</a>
+          <div id="cta-buttons" class="cta">
+            <a class="btn" data-target="contact" href="#contact">Écrivez‑moi</a>
             <!-- <a class="btn ghost" data-tel href="tel:">Appeler</a> -->
-            <a class="btn ghost" data-target="rdv" href="#rdv" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
+            <a class="btn" data-target="rdv" href="#rdv" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
           </div>
 
           <hr>
