--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     "email": "contact@mauss.ca"
   }
   </script>
-  <script src="/functions/api/cta-toggle.js" defer></script>
+  <script src="/functions/api/cta-toggle.js"></script>
 </head>
 
 <body>
