--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     "email": "contact@mauss.ca"
   }
   </script>
-  <script src="/functions/api/cta-toggle.js"></script>
 </head>
 
 <body>
@@ -187,6 +186,7 @@
     <p class="small">© 2025 MATTHIEU MAUSS</p>
   </footer>
 
+  <script src="/functions/api/cta-toggle.js" defer></script>
   <script src="script.js" defer></script>
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
