correcting script download

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <div class="label">Courriel</div>
             <div><a data-mailto href="mailto:contact@mauss.ca">contact@mauss.ca</a></div>
           </div>
+          <div class="row">
             <div class="label">Disponibilité</div>
             <div><span>Lun–Ven · 9h–17h</span></div>
           </div>
