je deplace la cta-toggle, c'est elle qui ne charge pas

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <p class="small">© 2025 MATTHIEU MAUSS</p>
   </footer>
 
-  <script src="/functions/api/cta-toggle.js" defer></script>
+  <script src="/functions/cta-toggle.js" defer></script>
   <script src="script.js" defer></script>
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
