--- a/index.html
+++ b/index.html
@@ -18,24 +18,7 @@
   <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
   <meta property="og:image:alt" content="Logo MAUSS CPA">
 
-  <!-- LocalBusiness structured data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "AccountingService",
-    "name": "MATTHIEU MAUSS CPA",
-    "image": "assets/Matthieu_Mauss_Logo_CPA.png",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Québec",
-      "addressRegion": "QC",
-      "addressCountry": "CA"
-    },
-    "url": "https://www.mauss.ca",
-    "areaServed": "Québec",
-    "email": "contact@mauss.ca"
-  }
-  </script>
+  <script src="functions/cta-toggle.js" defer></script>
 </head>
 
 <body>
@@ -187,7 +170,6 @@
     <p class="small">© 2025 MATTHIEU MAUSS</p>
   </footer>
 
-  <script src="/functions/cta-toggle.js" defer></script>
   <script src="script.js" defer></script>
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
