je deplace la cta-toggle, c'est elle qui ne charge pas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
   <meta property="og:image:alt" content="Logo MAUSS CPA">
 
-  <script src="functions/cta-toggle.js" defer></script>
+  <script type="module" src="functions/cta-toggle.js" defer></script>
 </head>
 
 <body>
@@ -85,7 +85,7 @@
         </aside>
       </div>
     <!-- Section Contact par courriel -->
-    <section id="contact" class="wrapper card" role="region" aria-labelledby="contact-title" class="is-hidden">
+    <section id="contact" class="wrapper card is-hidden" role="region" aria-labelledby="contact-title">
       <h2 id="contact-title">Contact par courriel</h2>
       <p class="small">Remplissez ce formulaire — c’est un simple envoi de courriel (pas de réponse automatique).</p>
 
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Section Prendre un rendez-vous -->
-    <section id="rdv" class="wrapper card" role="region" aria-labelledby="rdv-title" class="is-hidden">
+    <section id="rdv" class="wrapper card is-hidden" role="region" aria-labelledby="rdv-title">
       <h2 id="rdv-title">Prendre un rendez-vous</h2>
       <p class="small">Choisissez une date et un créneau de 30 minutes (entre 09:00 et 17:00). Je vous répondrai ensuite avec une invitation Google Meet.</p>
 
