je deplace la cta-toggle, c'est elle qui ne charge pas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="Matthieu_Mauss_Logo_CPA.png">
   <meta property="og:image:alt" content="Logo MAUSS CPA">
 
-  <script type="module" src="assets/js/cta-toggle.js" defer></script>
+  <script src="assets/js/cta-toggle.js" defer></script>
 </head>
 
 <body>
