--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           </div>
 
           <div id="cta-buttons" class="cta">
-            <a class="btn" data-target="contact" href="#contact">Écrivez‑moi</a>
+            <a class="btn primary" data-target="contact" href="#contact">Écrivez‑moi</a>
             <!-- <a class="btn ghost" data-tel href="tel:">Appeler</a> -->
-            <a class="btn" data-target="rdv" href="#rdv" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
+            <a class="btn ghost" data-target="rdv" href="#rdv" aria-label="Prendre rendez-vous en ligne">Prendre rendez‑vous</a>
           </div>
 
           <hr>
